--- a/style.css
+++ b/style.css
@@ -25,4 +25,12 @@
     background-size: cover;
  border-radius: 15px;
 } 
+
+@media screen and (max-width: 768px) {
+    .bgimage{
+        width: 100%;
+        height: 300px;
+    }
+    
+}
    
