--- a/style.css
+++ b/style.css
@@ -16,6 +16,13 @@
     border: 1px solid rgba(124, 78, 228, 1);
 
 }
+.nav-link{
+    transition: all 0.3s ease-in-out;
+}
+.nav-link:hover{
+    color: rgba(124, 78, 228, 1);
+    transform: scale(1.1);
+}
 .bgimage{
     width: 1200px;
     height: 600px;
@@ -31,11 +38,22 @@
     border-radius: 50%;
     background-color: rgba(124, 78, 228, 1);
 }
-
+.btn{
+    transition: all 0.3s ease-in-out;
+    cursor: pointer;
+}
+.btn:hover{
+    transform: scale(1.1);
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    border-radius: 15px;
+    border: 1px solid rgba(124, 78, 228, 1);
+    color: rgba(124, 78, 228, 1) !important;
+}
 @media screen and (max-width: 768px) {
     .bgimage{
         width: 100%;
         height: 300px;
+        overflow-y: hidden;
     }
     
 }
