--- a/style.css
+++ b/style.css
@@ -15,10 +15,10 @@
 .btnoutline {
   border: 1px solid rgba(124, 78, 228, 1);
 }
-.nav-link {
+.nav-link, .foot-links{
   transition: all 0.3s ease-in-out;
 }
-.nav-link:hover {
+.nav-link:hover, .foot-links:hover {
   color: rgba(124, 78, 228, 1);
   transform: scale(1.1);
 }
@@ -48,13 +48,27 @@
   border: 1px solid rgba(124, 78, 228, 1);
   color: rgba(124, 78, 228, 1) !important;
 }
+
 @media screen and (max-width: 768px) {
+  .form{
+    margin-left: 0 !important;
+    display: flex !important;
+    justify-content:space-between !important;
+  }
   .bgimage {
     width: 100%;
     height: 300px;
-    overflow-y: hidden;
+   
+  }
+  .position-div{
+    position: static !important;
+    width: 100% !important;
+    height: auto !important;
+    display: none !important;
+    
   }
   .card {
     width: 100%;
+    margin-left: 30px !important;
   }
 }
